spacing fix

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -22,6 +22,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin: 80px 0px;
 }
 
 .contact-link-container {
